[package]
name = "hyperchain"
version = "0.1.0"
edition = "2021"

[dependencies.hyperborealib]
git = "https://github.com/HyperboreaHQ/hyperborealib"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"
async-trait = "0.1"

blake3 = "1.5.3"
hex = "0.4.3"

# SQLite blockchain implementation
rusqlite = { version = "0.32", features = ["blob", "bundled"] }
